@@ -148,5 +148,7 @@ particular products (I apologize if I have missed anybody):
 	Juan Carlos Valero
 	Nick Hill
 	Ali Akcaagac
+	Dan Clark
+	Peter L. Berghold
 
 And many others for their many helpful suggestions and bug reports -- thanks.
